--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -70,27 +70,17 @@ footer.site-footer {
     margin-bottom: 0;
 
     @media screen and (max-width: $on-large) {
-      max-width: auto;
+      max-width: initial;
       margin-left: 0;
+      margin-top: $spacing-unit;
+
+      width: 100%;
+      display: block;
+      @include slight-border("top");
     }
-  }
 
-  p.call-to-action {
-    margin-bottom: 0;
-
-    a.button, button, input[type=button], input[type=submit], input[type=reset] {
-      padding: ($spacing-unit / 2 / 2) ($spacing-unit / 1.5 / 2);
-      border-radius: ($spacing-unit / 2 / 2);
-      font-size: 80%;
-      margin-right: ($spacing-unit / 4);
-
-      &:hover {
-        color: darken($cta-text-color, 10%);
-      }
-
-      > svg.svg-icon {
-        fill: $cta-text-color;
-      }
+    li + li {
+      padding-top: $spacing-unit * 0.33;
     }
   }
 }
