--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -3,12 +3,15 @@ $dotted-links-height-ratio: (1.25 / 1.5);
 
 // also applies within bigger/smaller content blocks
 // ratios (e.g. 1.375) are defaults from minima theme
-@mixin relative-font-size($ratio) {
+// cannot use 'relative-font-size', it's already defined elsewhere
+@mixin font-size($ratio) {
   font-size: $base-font-size * $ratio;
+  line-height: $base-font-size * $ratio * 1.3;
 
   // reset
   @media screen and (min-width: $on-large) {
     font-size: $base-font-size * $ratio;
+    line-height: $base-font-size * $ratio * 1.3;
   }
 }
 
@@ -34,8 +37,10 @@ $dotted-links-height-ratio: (1.25 / 1.5);
   }
 }
 
-@mixin dotted-links($base-font-size, $link-color: $default-link-color, $hover-color: $default-hover-color, $alpha: 0.3) {
-  font-size: $base-font-size;
+@mixin dotted-links($font-size, $link-color: $default-link-color, $hover-color: $default-hover-color, $alpha: 0.3) {
+  $ratio-of-font-size-to-base: $font-size / $base-font-size;
+
+  @include font-size(1.0 * $ratio-of-font-size-to-base);
 
   // tweak the link style to be cool
   a:not(.button) {
@@ -70,19 +75,19 @@ $dotted-links-height-ratio: (1.25 / 1.5);
   }
 
   h1 {
-    @include relative-font-size(1.75);
+    @include font-size(1.75 * $ratio-of-font-size-to-base);
   }
 
   h2 {
-    @include relative-font-size(1.5);
+    @include font-size(1.5 * $ratio-of-font-size-to-base);
   }
 
   h3 {
-    @include relative-font-size(1.25);
+    @include font-size(1.25 * $ratio-of-font-size-to-base);
   }
 
   h4 {
-    @include relative-font-size(1.125);
+    @include font-size(1.125 * $ratio-of-font-size-to-base);
   }
 }
 
@@ -106,4 +111,8 @@ $dotted-links-height-ratio: (1.25 / 1.5);
 @mixin slight-border($side) {
     border-#{$side}: 1px solid lighten($brand-color, 10%);
     padding-#{$side}: $spacing-unit;
+
+    @media screen and (max-width: $tablet) {
+      padding-#{$side}: $spacing-unit * $tablet-scale;
+    }
 }
